--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,13 @@ services:
       - "8080:8080"
     volumes:
       - ./src:/usr/src/app/src
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.test
+    image: ts-service-test
+    container_name: ts-service-test
+    restart: unless-stopped
+    volumes:
+      - ./src:/usr/src/app/src
+      - ./test:/usr/src/app/test
