--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,24 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    env_file: .env
     environment:
       - NODE_ENV=development
+      - MONGO_HOST=db-service-dev
     volumes:
       - ./src:/usr/src/app/src
+    depends_on:
+      - database
+  database:
+    image: mongo:latest
+    container_name: db-service-dev
+    env_file: .env
+    environment:
+      - MONGO_INITDB_DATABASE=$MONGO_DB
+      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USER
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASS
+    command: [--auth]
+    volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+    ports:
+      - "27017-27019:27017-27019"
