--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
       "*": ["node_modules/*", "src/types/*"],
       "@app/*": ["src/app/*"],
       "@config/*": ["src/config/*"],
+      "@controller/*": ["src/app/controller/*"],
+      "@model/*": ["src/app/model/*"],
       "@util/*": ["src/util/*"],
       "@pack": ["package.json"]
     }
