--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,6 @@ services:
     command: [--auth]
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      #- ./mongodb_data_container:/data/db       # to keep 'db' locally, uncomment this line
     ports:
       - "27017-27019:27017-27019"
