--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,5 +10,23 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    env_file: .env
     environment:
       - NODE_ENV=production
+      - MONGO_HOST=db-service
+    depends_on:
+      - database
+  database:
+    image: mongo:latest
+    container_name: db-service
+    env_file: .env
+    environment:
+      - MONGO_INITDB_DATABASE=$MONGO_DB
+      - MONGO_INITDB_ROOT_USERNAME=$MONGO_USER
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASS
+    command: [--auth]
+    volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      #- ./mongodb_data_container:/data/db       # to keep 'db' locally, uncomment this line
+    ports:
+      - "27017-27019:27017-27019"
